# structural-traversal

./: .travis.yml  LICENSE  README.md  structural-traversal.cabal
src/Data/: StructuralTraversal.hs
src/Data/StructuralTraversal/: Class.hs  Indexing.hs  Instances.hs  TH.hs
test/: Example.hs
